final sql model

--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -44,6 +44,9 @@
    "source": [
     "def make_frame(api_key, category, urls, startnumber, endnumber):        # 데이터 분류 및 저장\n",
     "    \n",
+    "    cat = pd.DataFrame(category)\n",
+    "    cat.to_csv(\"./data/category.csv\", mode='w', encoding='cp949', header=False, index=False)\n",
+    "    \n",
     "    region = {'지구구분 코드':['GIGU001','GIGU002','GIGU003','GIGU004','GIGU005','GIGU006','GIGU007','GIGU009','GIGU010','GIGU011', 'GIGU012'],\n",
     "         '이름':['잠실지구', '광나루지구', '뚝섬지구', '잠원지구', '반포지구', '이촌지구', '여의도지구', '양화지구', '난지지구', '망원지구','강서지구']}\n",
     "    region_df = pd.DataFrame(region)\n",
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
