--- a/insert_data.ipynb
+++ b/insert_data.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = ['facility.csv', 'region.csv', 'info.csv']"
+    "data_dir = ['category.csv', 'facility.csv', 'region.csv', 'info.csv']"
    ]
   },
   {
@@ -85,6 +85,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "category.csv DB CREATE\n",
+      "facility.csv DB CREATE\n",
+      "region.csv DB CREATE\n",
       "info.csv DB CREATE\n"
      ]
     }
@@ -95,7 +98,6 @@
     "    if file_path == 'info.csv':\n",
     "        for index in range(len(data)):\n",
     "            row = Information(\n",
-    "                category = data.loc[index][2],\n",
     "                name = data.loc[index][3],\n",
     "                tel = data.loc[index][4],\n",
     "                fare = data.loc[index][5],\n",
@@ -103,7 +105,8 @@
     "                longitude = float(data.loc[index][7])\n",
     "            )\n",
     "            row.region_id = (session.query(Region).filter(Region.code == data.loc[index][0]).all())[0].id\n",
-    "            row.facilities_id = (session.query(Facility).filter(Facility.code == data.loc[index][1]).all())[0].id\n",
+    "            row.facility_id = (session.query(Facility).filter(Facility.code == data.loc[index][1]).all())[0].id\n",
+    "            row.category_id = (session.query(Category).filter(Category.name == data.loc[index][2]).all())[0].id\n",
     "            session.add(row)\n",
     "        session.commit()\n",
     "        print(\"{} DB CREATE\".format(file_path))\n",
@@ -113,6 +116,15 @@
     "            row = Facility(\n",
     "                code=data.loc[index][0],\n",
     "                name=data.loc[index][1]\n",
+    "            )\n",
+    "            session.add(row)\n",
+    "        session.commit()\n",
+    "        print(\"{} DB CREATE\".format(file_path))\n",
+    "    \n",
+    "    elif file_path == 'category.csv':\n",
+    "        for index in range(len(data)):\n",
+    "            row = Category(\n",
+    "                name=data.loc[index][0]\n",
     "            )\n",
     "            session.add(row)\n",
     "        session.commit()\n",
