--- a/insert_data.ipynb
+++ b/insert_data.ipynb
@@ -27,9 +27,9 @@
     "\n",
     "\n",
     "engine = create_engine('mysql+pymysql://{}:{}@{}:{}/{}'.format(\n",
-    "    secrets['LOCAL_USER_ID'],\n",
-    "    secrets['LOCAL_USER_PASSWORD'],\n",
-    "    secrets['LOCAL_USER_URL'],\n",
+    "    secrets['RDS_USER_ID'],\n",
+    "    secrets['RDS_USER_PASSWORD'],\n",
+    "    secrets['RDS_USER_URL'],\n",
     "    secrets['RDS_PORT'],\n",
     "    secrets['DATABASE_NAME']\n",
     "))"
